<resources>
    <string name="app_name">Sigam2</string>
    <string name="nomedisciplina">NomeDisciplina</string>
    <string name="nomeprofessor">NomeProfessor</string>
    <string name="status">Status</string>
    <string name="cargahoraria">CargaHoraria</string>
    <string name="creditos">Creditos:</string>
    <string name="carga_horaria">Carga horaria:</string>
    <string name="btn_salvar">Login</string>
    <string name="cancelar">Cancelar</string>
    <string name="placeholder_login">Ex.: jose.silva</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
